<resources>
    <string name="app_name">Shara</string>

    <string name="hint_enter_your_name">Full Name</string>
    <string name="hint_enter_your_email">Email</string>
    <string name="hint_enter_your_phone_number">Phone number</string>
    <string name="hint_enter_your_password">Password</string>

    <string name="login">Login</string>
    <string name="register">Register</string>

    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign up</string>
    <string name="don_t_have_an_account_sign_in">Already have an account? Sign in</string>
    <string name="don_t_have_an_account_sign_up_underlined">Sign up</string>
    <string name="don_t_have_an_account_sign_in_underlined">Sign in</string>

</resources>
